# OMA

./: .gitignore  README.md  build tensorflow.txt  cmd_ffmpeg.txt  order.py  pseudocodice_ransac.txt  tfconvert.py  toco.sh
ARPydnet/: .project  build.gradle  settings.gradle
ARPydnet/app/: build.gradle
ARPydnet/app/libs/: tensorflow-lite-2.2.aar  tensorflow-lite-gpu.aar  tensorflow-lite.aar
ARPydnet/app/src/main/: AndroidManifest.xml
ARPydnet/app/src/main/assets/: pydnet_half_float16.tflite  pydnet_height_default.tflite  pydnet_height_float16.tflite  pydnet_quarter_default.tflite  pydnet_quarter_float16.tflite  pydnet_v2_half_default.tflite  pydnet_v2_half_float16.tflite  pydnet_v2_half_quantized1.tflite  pydnet_v2_half_quantized_int_input1.tflite
ARPydnet/app/src/main/assets/shaders/: object.frag  object.vert  plane.frag  plane.vert  pointer.frag  pointer.vert  screenquad.frag  screenquad.vert  screenshot.frag
ARPydnet/app/src/main/cpp/: CMakeLists.txt  native-color.c  native-norm.c  native-tflite-model.c
ARPydnet/app/src/main/res/drawable/: ic_quantize_off.xml
ARPydnet/app/src/main/res/layout/: activity_arpydnet.xml  activity_solar.xml  main_fragment_double.xml  main_fragment_single.xml
ARPydnet/app/src/main/res/layout-land/: main_fragment_double.xml
ARPydnet/app/src/main/res/menu/: main_menu.xml
ARPydnet/app/src/main/res/values/: strings.xml
ARPydnet/gradle/wrapper/: gradle-wrapper.properties
ComputeScene/: .gitignore  build.gradle  settings.gradle
ComputeScene/assets/shaders/: object.frag  object.vert  screenquad.frag
ComputeScene/models/: dsnet.json  dsnetv2.json  dsnetv3.json  pydnet.json  pydnetv2.json  pydnetv3.json
ComputeScene/objs/: objs.json  objs.json.bak
ComputeScene/shaders/: object.frag  object.vert  point_cloud.frag  point_cloud.vert  screenquad.frag  screenshot.frag  screenshot.vert
ComputeScene/src/main/java/android/opengl/: Matrix.java
ComputeScene/test/: gt_16bit.raw  gt_8bit.raw  prediction_16bit.raw  prediction_8bit.raw  result.txt  script.py
DatasetGenerator/: gradlew  gradlew.bat  settings.gradle
DatasetGenerator/app/: build.gradle
DatasetGenerator/app/src/main/: AndroidManifest.xml
DatasetGenerator/app/src/main/assets/shaders/: screenquad.frag  screenquad.vert
DatasetGenerator/app/src/main/res/drawable/: ic_record.xml
DatasetGenerator/app/src/main/res/layout/: activity_main.xml  edit_text_dialog.xml
DatasetGenerator/app/src/main/res/menu/: main_menu.xml
DatasetGenerator/app/src/main/res/values/: strings.xml
DatasetGenerator/gradle/wrapper/: gradle-wrapper.properties
DatasetScripts/: .gitignore  PointCloudDataset.py  TOFDataset.py  conv2rgba.py  points2obj.py  points2png.py  tof2png.py  usage.txt
SceneGenerator/: build.gradle  settings.gradle
SceneGenerator/app/: build.gradle
SceneGenerator/app/src/main/: AndroidManifest.xml
SceneGenerator/gradle/wrapper/: gradle-wrapper.properties
(+104 files in other folders)
